[package]
name = "oko"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
winit = "0.26.1"
log = "0.4.16"
clap = "3.1.12"
env_logger = "0.9.0"
gltf = "1.0.0"
ash = "0.36.0"
ash-window = "0.9.1"
maplit = "1.0.2"
gpu-allocator = "0.17.0"
cstr = "0.2.10"
glm = { package = "nalgebra-glm", version = "0.17.0" }
renderdoc = "0.10.1"

[build-dependencies]
anyhow = "1.0.57"
hassle-rs = "0.9.0"
walkdir = "2.3.2"
shaderc = "0.8.0"
cargo-emit = "0.2.1"
